// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch render default component if no match was found 1`] = `
<h1>
  Default Component
</h1>
`;

exports[`Switch should render the first component that match 1`] = `
<h1>
  Test Archive Component
</h1>
`;

exports[`Switch should return null if no component match 1`] = `null`;
